--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://dbuser:mypassword@localhost:5432/db_final_project
+sqlalchemy.url = postgresql://postgres:vm5449@localhost:5432/db_project
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
